# ovn-kubernetes

./: AUTHORS  README.md  README_cni.md  ovn_cni.py  requirements.txt  setup.cfg
contrib/: README.md  sample_policy_1.json  sample_policy_2.json  sample_policy_3.json
ovn_k8s/: __init__.py  config.py  conn_processor.py  constants.py  policy_processor.py  utils.py
ovn_k8s/cmd/: init_host.py  watcher.py
ovn_k8s/lib/: kubernetes.py  ovn.py
ovn_k8s/watcher/: np_watcher.py  ns_watcher.py  ovndb_watcher.py  pod_watcher.py  registry.py  watcher.py
watcher/: watcher.py
